fixed hidden line breaks in tasktracker descriptions, as per ticket #1878
git-svn-id: https://svn.socialplanning.org/svn/TaskTracker/trunk@11213 40f73b84-6177-4a8e-8c61-7eee4b1974ed

--- a/tasktracker/public/stylesheets/combined.css
+++ b/tasktracker/public/stylesheets/combined.css
@@ -22,7 +22,10 @@
 }
 
 #oc-tasktracker br {
-	display: none;
+      	display: none; 
+}
+#oc-tasktracker .editable br {
+        display: block;
 }
 
 	#oc-tasktracker.tt-context-tasklist-create br,
